# django-general-utils

./: .gitignore  CLAUDE.md  README.md  boot_django.py  docker-compose.dev.yml  makemigrations.py  migrate.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
django_general_utils/: apps.py
django_general_utils/context_processors/: envs.py
django_general_utils/models/: __init__.py  base.py  base_without_safe_delete.py  signals.py  simple_history.py  user.py  uuid.py  uuid_v2.py
django_general_utils/models/constraints/: __init__.py  base_constraint.py  check_constraint.py  check_editable_constraint.py  check_error_constraint.py  check_flow_status.py  check_max_rows_contraint.py  check_max_rows_without_safe_delete_contraint.py  check_model_relation_constraint.py  unique_constraint.py  unique_without_safe_delete_constraint.py
django_general_utils/models/contraints/: __init__.py  check_error_constraint.py  unique_constraint.py
django_general_utils/models/fields/: __init__.py  advanced_char_field.py  choice_array_field.py  float_field.py  foreign_key.py  formated_number_field.py  integer_field.py  json_schema_field.py  one_to_one.py  positive_integer_field.py  vector_field.py
django_general_utils/models/functions/: __init__.py  array_append.py  array_to_string.py  clean_html.py  formatted_datetime.py  random_number.py  round.py  subquery_aggregate.py  subquery_count.py  subquery_sum.py  with_choiches.py
django_general_utils/models/managers/: base.py  base_without_safe_delete.py
django_general_utils/models/querysets/: base.py  base_v2.py  base_without_safe_delete.py
django_general_utils/templatetags/: call_method.py  dict_get.py
django_general_utils/utils/: __init__.py  delete_cache.py  file_to_json.py  is_valid_uuid.py  str_to_boolean.py
django_general_utils/utils/ajax_datatable/: __init__.py  ajax_datatable_view.py
django_general_utils/utils/drf/: __init__.py  drf_nested_parser.py  exception_handler.py  json_to_form_data.py  pagination.py  throttle.py
django_general_utils/utils/drf/fields/: __init__.py  lazy_ref_field.py  multiple_choice_field.py  nested_primary_key_related_field.py
django_general_utils/utils/drf/filters/: __init__.py  backend_filter.py  or_filter.py  ordering_filter.py  postgres_search.py
django_general_utils/utils/drf/middleware/: __init__.py  token_auth_middleware_socket.py
django_general_utils/utils/drf/validation_errors/: __init__.py  list_validation_error.py  validation_error_400.py  validation_error_401.py  validation_error_404.py  validation_error_406.py  validation_error_429.py  validation_error_501.py
django_general_utils/utils/drf/validations/: __init__.py  (+4 more)
django_general_utils/utils/drf_spectacular/: __init__.py  auto_schema.py  schema_generator.py
django_general_utils/utils/factory/: __init__.py  generate_dict_factory.py  provider.py  to_dict.py
django_general_utils/utils/formats/: __init__.py  format_currency.py  format_decimal.py
django_general_utils/utils/forms/: __init__.py  model_form.py
django_general_utils/utils/image/: __init__.py  blur.py  blur_img_to_base64.py
django_general_utils/utils/postgres/: __init__.py  search.py  search_v2.py
django_general_utils/utils/rest_ql/: __init__.py  dynamic_fields_mixin.py
django_general_utils/utils/views/: __init__.py  create_view.py  update_view.py
docker/dev/: Dockerfile
docs/: 00-contexto-libreria.md  01-tests.md  02-python-style.md
tests/: test_blur_img_to_base64.py  test_bulk_create.py  test_constraints_pure.py  test_custom_fields.py  test_db_backed.py  test_drf_misc.py  test_drf_validations_pure.py  test_factory_dict_helpers.py  test_file_to_json.py  test_formats.py  test_is_valid_uuid.py  test_json_to_form_data.py  test_str_to_boolean.py  test_templatetags_and_context_processors.py  test_uuid_v2.py
(+17 files in other folders)
