[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "django-general-utils"
version = "1.0.0"
description = "Sample installable django app"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=4.2.4,<=6.0.7",
    "django-safedelete>=1.3.3",
    "django-ordered-model>=3.7.4",
    "djangorestframework>=3.14.0",
    "nested-multipart-parser>=1.5.0",
    "django-restql>=0.15.3",
    "channels>=4.0.0",
    "django-timezone-field>=5.0",
    "Pillow>=10.1.0",
    "django-localflavor>=4.0",
    "Faker>=0.7.0",
    "factory-boy>=3.3.0",
    "django-model-utils>=4.3.1",
    "djangorestframework-simplejwt>=5.3.1",
    "drf-spectacular>=0.27.0",
    "Babel>=2.14.0",
    "django-queryable-properties>=1.9.0",
    "django-simple-history>=3.4.0",
    "django-middleware-global-request>=0.3.3",
    "django-ajax-datatable>=4.4.5",
    "pgvector>=0.4.1",
    "numpy>=1.24",
]

[project.urls]
Repository = "https://github.com/tsepulvedacaroca01/django-general-utils"

[dependency-groups]
test = [
    "pytest==7.4.4",
    "pytest-xdist==3.5.0",
    "psycopg2-binary==2.9.9",
]
lint = [
    "ruff>=0.6.9",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
]

[tool.setuptools.packages.find]
include = ["django_general_utils*"]

[tool.ruff]
line-length = 120
exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/factories/*.py" = ["F811"]
