# setup.cfg
[metadata]
name = django-general-utils
version = 1.0.0
description = Sample installable django app
long_description = file:README.rst
url = https://github.com/tsepulvedacaroca01/django-general-utils
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django>=4.2.4
    django-safedelete>=1.3.3
    django-ordered-model>=3.7.4
    djangorestframework>=3.14.0
    nested-multipart-parser>=1.5.0
    django-restql>=0.15.3
    channels>=4.0.0
    django-timezone-field>=5.0
    Pillow>=10.1.0
    django-localflavor>=4.0
    Faker>=0.7.0
    factory-boy>=3.3.0
    django-model-utils>=4.3.1
    djangorestframework-simplejwt>=5.3.1
    drf-spectacular>=0.27.0
    Babel>=2.14.0
    django-queryable-properties>=1.9.0
    django-simple-history>=3.4.0
    django-middleware-global-request>=0.3.3
    django-ajax-datatable>=4.4.5
    pgvector>=0.4.1
    nested-multipart-parser>=1.5.0
